[gd_scene load_steps=9 format=3 uid="uid://bkooy2uf63l2i"]

[ext_resource type="Script" uid="uid://cyoiq567yd3po" path="res://scripts/entities/pickup.gd" id="1_7cqbe"]
[ext_resource type="Texture2D" uid="uid://do5xg3b6tgtni" path="res://assets/entities/health_pickup.png" id="2_kyjqt"]
[ext_resource type="AudioStream" uid="uid://cbfb7mgc7jkti" path="res://assets/sfx/heal.mp3" id="3_kyjqt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kyjqt"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PickupArea/PickupCollision:disabled")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:selected_item")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_yoejb"]
atlas = ExtResource("2_kyjqt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ls27i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoejb")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ssuvv"]
radius = 5.38516

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyjqt"]
size = Vector2(29, 14)

[node name="Pickup" type="CharacterBody2D" groups=["Items"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_7cqbe")

[node name="PickupSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kyjqt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ls27i")
autoplay = "default"
frame_progress = 0.391035

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ssuvv")

[node name="PickupArea" type="Area2D" parent="."]
collision_mask = 2

[node name="PickupCollision" type="CollisionShape2D" parent="PickupArea"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_kyjqt")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kyjqt")
bus = &"SFX"

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
